# ormery-rust-app

./: .gitignore  Cargo.toml  LIB_VERSION  README.md  retro.css
migrations/: 001_init.sql
src/: main.rs
static/: retro.css
templates/: base.html  index.html  list.html
