[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
askama = "0.13"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }
